Update to Java 11 (#3379)